added some animation

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <div class="balloons"></div>
     <div class="container">
         <div class="card-wrapper">
             <!-- Side 1: Recipient Entry -->
@@ -122,6 +123,7 @@
                             Change RSVP
                         </button>
                     </div>
+                    <div class="confetti hidden" id="confettiContainer"></div>
 
                     <div class="navigation-dots">
                         <button class="dot" onclick="navigateToSide(1)" aria-label="Go to side 1"></button>
@@ -135,6 +137,7 @@
     </div>
 
     <script src="script.js"></script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 
 </html>
