--- a/public/index.html
+++ b/public/index.html
@@ -138,6 +138,7 @@
 
     <script src="script.js"></script>
     <script defer src="/_vercel/insights/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </body>
 
 </html>
