Update venue details

--- a/public/index.html
+++ b/public/index.html
@@ -82,11 +82,12 @@
                         </div>
 
                         <div class="detail-block">
-                            <div class="detail-icon">📝</div>
+                            <div class="detail-icon">📍</div>
                             <div class="detail-content">
-                                <h3>The Plan</h3>
-                                <p>Bring a fun game idea! 🎲</p>
-                                <p class="detail-sub">Pack casuals for a night stay 🌙</p>
+                                <h3>Venue</h3>
+                                <p>Saumya's Farm</p>
+                                <a href="https://maps.app.goo.gl/eEobkfwiWtYM5Z557?g_st=iw" target="_blank"
+                                    class="map-link">View Map →</a>
                             </div>
                         </div>
                     </div>
