Add stay instructions block

--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,15 @@
                         </div>
 
                         <div class="detail-block">
+                            <div class="detail-icon">📝</div>
+                            <div class="detail-content">
+                                <h3>The Stay</h3>
+                                <p>Pack casuals for a night stay 🌙</p>
+                                <p class="detail-sub">Bring a fun game idea! 🎲</p>
+                            </div>
+                        </div>
+
+                        <div class="detail-block">
                             <div class="detail-icon">📍</div>
                             <div class="detail-content">
                                 <h3>Venue</h3>
